--- a/GRANGE_BOARD/src/main/resources/templates/layouts/default.html
+++ b/GRANGE_BOARD/src/main/resources/templates/layouts/default.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<title>GRANGE_BOARD</title>
 	<meta charset="utf-8">
@@ -10,6 +12,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
 <div class="jumbotron text-center">
@@ -17,21 +20,7 @@
 	<p>게시판 실습 프로젝트</p> 
 </div>
 
-<div class="container" style="margin-top:30px">
-	<div class="row">
-		<form action="/board/write" method="post" style="width:100%;">
-			<div class="form-group">
-				<input type="text" name="title" class="form-control" placeholder="제목" />
-			</div>
-			<div class="form-group">
-				<textarea name="content" rows="20" class="form-control" placeholder="내용"></textarea>
-			</div>
-			<div class="form-group float-right">
-				<a th:href="@{/board/list}"><button type="button" class="btn btn-secondary">취소</button></a>
-				<button type="submit" class="btn btn-primary">작성</button>		
-			</div>				
-		</form>
-	</div>
+<div layout:fragment="content"> <!-- 다른 페이지에서 채워넣겠다. -->
 </div>
 
 </body>
