--- a/GRANGE_BOARD/src/main/resources/templates/pages/board/list.html
+++ b/GRANGE_BOARD/src/main/resources/templates/pages/board/list.html
@@ -2,7 +2,7 @@
 <html lang="ko"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="layouts/default">
+    layout:decorator="layouts/boardDefault">
 
 <div layout:fragment="content" class="container" style="margin-top:30px">
 	<div class="row">
