--- a/GRANGE_BOARD/src/main/resources/templates/pages/board/write.html
+++ b/GRANGE_BOARD/src/main/resources/templates/pages/board/write.html
@@ -2,7 +2,7 @@
 <html lang="ko"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="layouts/default">
+    layout:decorator="layouts/boardDefault">
 
 <div layout:fragment="content" class="container" style="margin-top:30px">
 	<div class="row">
@@ -16,7 +16,7 @@
 			<div class="form-group float-right">
 				<a th:href="@{/board/list}"><button type="button" class="btn btn-secondary">취소</button></a>
 				<button type="submit" class="btn btn-primary">작성</button>		
-			</div>				
+			</div>
 		</form>
 	</div>
 </div>
