--- a/GRANGE_BOARD/src/main/resources/templates/pages/board/list.html
+++ b/GRANGE_BOARD/src/main/resources/templates/pages/board/list.html
@@ -7,7 +7,7 @@
 <div layout:fragment="content" class="container" style="margin-top:30px">
 	<div class="row">
 	
-		<!-- <span th:text="${test}"></span> -->	<!-- thymeleaf를 통해서 controller에서 test라는 key값을 가져온다. -->
+		<!-- thymeleaf를 통해서 controller에서 model의 key값을 가져온다. -->
 		
 		<table class="table table-hover">
 			<colgroup>
@@ -31,13 +31,17 @@
 					<td>
 						<!-- controller의 requestMapping -->
 						<a th:href="@{/board/detail/{id}(id=${board.id})}" th:text=${board.title}></a>
-						<!-- <a href="detail.html">제목123123</a> 파일 단위 이동 -->
 					</td>
 					<td th:text=${board.regId}></td>
 					<td th:text=${board.regDtt}></td>
 				</tr>
 				
-			</tbody>			
+			</tbody>	
+			
+			<tfooter>
+				<a th:href="@{?page={page}(page=${page-1})}">prev</a>
+				<a th:href="@{?page={page}(page=${page+1})}">next</a>
+			</tfooter>		
 		</table>
 	</div>
 	<div class="row float-right">
