--- a/GRANGE_BOARD/src/main/resources/templates/layouts/boardDefault.html
+++ b/GRANGE_BOARD/src/main/resources/templates/layouts/boardDefault.html
@@ -13,6 +13,18 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 		
 	<script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=39025e995a582206dc39b02f44d0f585"></script>
+
+	<style>
+	html, body {
+	   width: 100%;
+	   height: 100%;
+	}
+	.container {
+	   width: 100%;
+	   height: 100%;
+	}
+	</style>
 </head>
 
 <body>
