--- a/GRANGE_BOARD/src/main/resources/templates/layouts/userDefault.html
+++ b/GRANGE_BOARD/src/main/resources/templates/layouts/userDefault.html
@@ -11,6 +11,18 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=39025e995a582206dc39b02f44d0f585"></script>
+
+	<style>
+	html, body {
+	   width: 100%;
+	   height: 100%;
+	}
+	.container {
+	   width: 100%;
+	   height: 100%;
+	}
+	</style>
 </head>
 
 <body>
